--- a/app/view/url/create.pug
+++ b/app/view/url/create.pug
@@ -1,2 +1,8 @@
-extends layout/header
-div test
+//- index.pug
+extends /layout/layout.pug
+block append title  
+  link(href="/public/css/pages/url/create.css" type='text/css' rel="stylesheet")
+block content
+  h1 测试
+
+  
