--- a/app/view/layout/header.pug
+++ b/app/view/layout/header.pug
@@ -1,1 +1,4 @@
-div header
+if !HIDDEHEADER
+  div.short-header #{site_title || '短链接生成'}
+block append title 
+  link(href="/public/css/common.css" type='text/css' rel="stylesheet")
