--- a/app/public/css/common.css
+++ b/app/public/css/common.css
@@ -1,5 +1,6 @@
 
-body,html,* {padding: 0;margin: 0; width: 100%; height: 100%;}
+body,html,* {padding: 0;margin: 0;}
+body,html {width: 100%; height: 100%;}
 body {
   width: 100%;
   max-width: 750px;
@@ -14,4 +15,8 @@ body {
   text-align: center;
   background: #06f;
   color: #fff;
+}
+
+.hide {
+  display: none;
 }
